--- a/manual/00Index.html
+++ b/manual/00Index.html
@@ -11,7 +11,7 @@
 <div style="text-align: center;">
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/packages.html"><img class="arrow" src="http://stat.ethz.ch/R-manual/R-devel/doc/html/left.jpg" alt="[Up]" /></a>
 <a href="http://stat.ethz.ch/R-manual/R-devel/doc/html/index.html"><img class="arrow" src="http://stat.ethz.ch/R-manual/R-devel/doc/html/up.jpg" alt="[Top]" /></a>
-</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9.5-2</h2>
+</div><h2>Documentation for package &lsquo;metaSEM&rsquo; version 0.9.8</h2>
 
 <ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
 <li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
@@ -21,9 +21,34 @@
 <h2>Help Pages</h2>
 
 
+<p style="text-align: center;">
+<a href="# "> </a>
+<a href="#A">A</a>
+<a href="#B">B</a>
+<a href="#C">C</a>
+<a href="#D">D</a>
+<a href="#H">H</a>
+<a href="#I">I</a>
+<a href="#J">J</a>
+<a href="#L">L</a>
+<a href="#M">M</a>
+<a href="#N">N</a>
+<a href="#P">P</a>
+<a href="#R">R</a>
+<a href="#S">S</a>
+<a href="#T">T</a>
+<a href="#V">V</a>
+<a href="#W">W</a>
+</p>
+
 <table width="100%">
 <tr><td style="width: 25%;"><a href="metaSEM-package.html">metaSEM-package</a></td>
 <td>Meta-Analysis using Structural Equation Modeling</td></tr>
+</table>
+
+<h2><a name="A">-- A --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="Aloe14.html">Aloe14</a></td>
 <td>Multivariate effect sizes between classroom management self-efficacy (CMSE) and other variables reported by Aloe et al. (2014)</td></tr>
 <tr><td style="width: 25%;"><a href="anova.html">anova.meta</a></td>
@@ -38,6 +63,11 @@
 <td>Convert a Matrix into MxMatrix-class</td></tr>
 <tr><td style="width: 25%;"><a href="asyCov.html">asyCov</a></td>
 <td>Compute Asymptotic Covariance Matrix of a Correlation/Covariance Matrix</td></tr>
+</table>
+
+<h2><a name="B">-- B --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="BCG.html">BCG</a></td>
 <td>Dataset on the Effectiveness of the BCG Vaccine for Preventing Tuberculosis</td></tr>
 <tr><td style="width: 25%;"><a href="bdiagMat.html">bdiagMat</a></td>
@@ -56,6 +86,11 @@
 <td>Five Published Trails from Berkey et al. (1998)</td></tr>
 <tr><td style="width: 25%;"><a href="Bornmann07.html">Bornmann07</a></td>
 <td>A Dataset from Bornmann et al. (2007)</td></tr>
+</table>
+
+<h2><a name="C">-- C --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="Cheung00.html">Cheung00</a></td>
 <td>Fifty Studies of Correlation Matrices used in Cheung and Chan (2000)</td></tr>
 <tr><td style="width: 25%;"><a href="Cheung09.html">Cheung09</a></td>
@@ -84,12 +119,22 @@
 <td>Create an F matrix to select observed variables</td></tr>
 <tr><td style="width: 25%;"><a href="create.mxMatrix.html">create.mxMatrix</a></td>
 <td>Create a Vector into MxMatrix-class</td></tr>
+</table>
+
+<h2><a name="D">-- D --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="Diag.html">Diag</a></td>
 <td>Matrix Diagonals</td></tr>
 <tr><td style="width: 25%;"><a href="Diag.html">Diag&lt;-</a></td>
 <td>Matrix Diagonals</td></tr>
 <tr><td style="width: 25%;"><a href="Digman97.html">Digman97</a></td>
 <td>Factor Correlation Matrices of Big Five Model from Digman (1997)</td></tr>
+</table>
+
+<h2><a name="H">-- H --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="HedgesOlkin85.html">HedgesOlkin85</a></td>
 <td>Effects of Open Education Reported by Hedges and Olkin (1985)</td></tr>
 <tr><td style="width: 25%;"><a href="homoStat.html">homoStat</a></td>
@@ -98,6 +143,11 @@
 <td>Simulated Effect Sizes Reported by Hox (2002)</td></tr>
 <tr><td style="width: 25%;"><a href="Hunter83.html">Hunter83</a></td>
 <td>Fourteen Studies of Correlation Matrices reported by Hunter (1983)</td></tr>
+</table>
+
+<h2><a name="I">-- I --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="indirectEffect.html">indirectEffect</a></td>
 <td>Estimate the asymptotic covariance matrix of standardized or unstandardized indirect and direct effects</td></tr>
 <tr><td style="width: 25%;"><a href="is.pd.html">is.pd</a></td>
@@ -106,10 +156,27 @@
 <td>Data Set from ISSP (2005)</td></tr>
 <tr><td style="width: 25%;"><a href="issp89.html">issp89</a></td>
 <td>Data Set from Cheung and Chan (2005; 2009)</td></tr>
+</table>
+
+<h2><a name="J">-- J --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="Jaramillo05.html">Jaramillo05</a></td>
 <td>Dataset from Jaramillo, Mulki &amp; Marshall (2005)</td></tr>
+</table>
+
+<h2><a name="L">-- L --</a></h2>
+
+<table width="100%">
+<tr><td style="width: 25%;"><a href="lavaan2RAM.html">lavaan2RAM</a></td>
+<td>Convert 'lavaan' models to RAM models</td></tr>
 <tr><td style="width: 25%;"><a href="list2matrix.html">list2matrix</a></td>
 <td>Convert a List of Symmetric Matrices into a Stacked Matrix</td></tr>
+</table>
+
+<h2><a name="M">-- M --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="Mak09.html">Mak09</a></td>
 <td>Eight studies from Mak et al. (2009)</td></tr>
 <tr><td style="width: 25%;"><a href="matrix2bdiag.html">matrix2bdiag</a></td>
@@ -124,8 +191,18 @@
 <td>Three-Level Univariate Meta-Analysis with Maximum Likelihood Estimation</td></tr>
 <tr><td style="width: 25%;"><a href="metaSEM-package.html">metaSEM</a></td>
 <td>Meta-Analysis using Structural Equation Modeling</td></tr>
+</table>
+
+<h2><a name="N">-- N --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="Norton13.html">Norton13</a></td>
 <td>Studies on the Hospital Anxiety and Depression Scale Reported by Norton et al. (2013)</td></tr>
+</table>
+
+<h2><a name="P">-- P --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="pattern.n.html">pattern.n</a></td>
 <td>Display the Accumulative Sample Sizes for the Covariance Matrix</td></tr>
 <tr><td style="width: 25%;"><a href="pattern.na.html">pattern.na</a></td>
@@ -158,6 +235,11 @@
 <td>Print Methods for 'tssem1FEM', 'tssem1FEM.cluster', 'tssem1REM', 'wls', 'meta', 'meta3X' and 'reml' Objects</td></tr>
 <tr><td style="width: 25%;"><a href="print.html">print.wls</a></td>
 <td>Print Methods for 'tssem1FEM', 'tssem1FEM.cluster', 'tssem1REM', 'wls', 'meta', 'meta3X' and 'reml' Objects</td></tr>
+</table>
+
+<h2><a name="R">-- R --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="readData.html">readFullMat</a></td>
 <td>Read External Correlation/Covariance Matrices</td></tr>
 <tr><td style="width: 25%;"><a href="readData.html">readLowTriMat</a></td>
@@ -172,6 +254,11 @@
 <td>Rerun models via mxTryHard()</td></tr>
 <tr><td style="width: 25%;"><a href="Roorda11.html">Roorda11</a></td>
 <td>Studies on Students' School Engagement and Achievement Reported by Roorda et al. (2011)</td></tr>
+</table>
+
+<h2><a name="S">-- S --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="summary.html">summary.meta</a></td>
 <td>Summary Method for tssem1, wls, meta and meta3X Objects</td></tr>
 <tr><td style="width: 25%;"><a href="summary.html">summary.meta3X</a></td>
@@ -188,6 +275,11 @@
 <td>Summary Method for tssem1, wls, meta and meta3X Objects</td></tr>
 <tr><td style="width: 25%;"><a href="summary.html">summary.wls.cluster</a></td>
 <td>Summary Method for tssem1, wls, meta and meta3X Objects</td></tr>
+</table>
+
+<h2><a name="T">-- T --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="tssem1.html">tssem1</a></td>
 <td>First Stage of the Two-Stage Structural Equation Modeling (TSSEM)</td></tr>
 <tr><td style="width: 25%;"><a href="tssem1.html">tssem1FEM</a></td>
@@ -196,6 +288,11 @@
 <td>First Stage of the Two-Stage Structural Equation Modeling (TSSEM)</td></tr>
 <tr><td style="width: 25%;"><a href="wls.html">tssem2</a></td>
 <td>Conduct a Correlation/Covariance Structure Analysis with WLS</td></tr>
+</table>
+
+<h2><a name="V">-- V --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="vcov.html">vcov.meta</a></td>
 <td>Extract Covariance Matrix Parameter Estimates from Various Objects</td></tr>
 <tr><td style="width: 25%;"><a href="vcov.html">vcov.meta3X</a></td>
@@ -216,6 +313,11 @@
 <td>Extract Covariance Matrix Parameter Estimates from Various Objects</td></tr>
 <tr><td style="width: 25%;"><a href="vec2symMat.html">vec2symMat</a></td>
 <td>Convert a Vector into a Symmetric Matrix</td></tr>
+</table>
+
+<h2><a name="W">-- W --</a></h2>
+
+<table width="100%">
 <tr><td style="width: 25%;"><a href="wls.html">wls</a></td>
 <td>Conduct a Correlation/Covariance Structure Analysis with WLS</td></tr>
 <tr><td style="width: 25%;"><a href="wvs94a.html">wvs94a</a></td>
