--- a/manual/00frame_toc.html
+++ b/manual/00frame_toc.html
@@ -120,6 +120,7 @@ dt, p code {
 <li><a href="is.pd.html" target="content">is.pd</a></li>
 <li><a href="issp05.html" target="content">issp05</a></li>
 <li><a href="issp89.html" target="content">issp89</a></li>
+<li><a href="lavaan2RAM.html" target="content">lavaan2RAM</a></li>
 <li><a href="list2matrix.html" target="content">list2matrix</a></li>
 <li><a href="matrix2bdiag.html" target="content">matrix2bdiag</a></li>
 <li><a href="meta.html" target="content">meta</a></li>
@@ -143,7 +144,7 @@ dt, p code {
 <li><a href="wvs94b.html" target="content">wvs94b</a></li>
 </ul>
 
-<p>Generated with <a href="http://yihui.name/knitr">knitr</a>  1.11</p>
+<p>Generated with <a href="http://yihui.name/knitr">knitr</a>  1.12.3</p>
 
 </body>
 
