--- a/manual/metaSEM-package.html
+++ b/manual/metaSEM-package.html
@@ -5,94 +5,94 @@
 
 <table width="100%" summary="page for metaSEM-package {metaSEM}"><tr><td>metaSEM-package {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Meta-Analysis using Structural Equation Modeling
+<h2>Meta-Analysis using Structural Equation Modeling 
 </h2>
 
 <h3>Description</h3>
 
-<p>The metaSEM package conducts univariate and multivariate
-meta-analyses using a structural equation modeling (SEM) approach
-via the OpenMx package. It also implements the two-stage SEM approach
-to conduct meta-analytic structural equation modeling on 
-correlation/covariance matrices.    
+<p>A collection of functions for conducting meta-analysis using a 
+structural equation modeling (SEM) approach via the 'OpenMx' package. 
+It also implements the two-stage SEM approach to conduct meta-analytic 
+structural equation modeling on correlation and covariance matrices.  
 </p>
 
 
 <h3>Details</h3>
 
+ 
 
 <table summary="Rd table">
 <tr>
- <td style="text-align: left;">
+ <td style="text-align: left;"> 
 Package: </td><td style="text-align: left;"> metaSEM</td>
 </tr>
 <tr>
- <td style="text-align: left;">
+ <td style="text-align: left;"> 
 Type: </td><td style="text-align: left;"> Package</td>
 </tr>
 <tr>
- <td style="text-align: left;">
-Version: </td><td style="text-align: left;"> 0.9.5-2</td>
+ <td style="text-align: left;"> 
+Version: </td><td style="text-align: left;"> 0.9.8</td>
 </tr>
 <tr>
- <td style="text-align: left;">
-Date: </td><td style="text-align: left;"> 2015-09-17</td>
+ <td style="text-align: left;"> 
+Date: </td><td style="text-align: left;"> 2016-04-16</td>
 </tr>
 <tr>
- <td style="text-align: left;">
+ <td style="text-align: left;"> 
 License: </td><td style="text-align: left;"> GPL (&gt;=2)</td>
 </tr>
 <tr>
- <td style="text-align: left;">
+ <td style="text-align: left;"> 
 LazyLoad: </td><td style="text-align: left;"> yes</td>
 </tr>
 <tr>
- <td style="text-align: left;">
+ <td style="text-align: left;"> 
 </td>
 </tr>
 
 </table>
-
+ 
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
-<p>Maintainer: Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Maintainer: Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>References</h3>
 
-<p>Cheung, M. W.-L. (2008). A model for integrating fixed-, random-, and mixed-effects meta-analyses into structural equation modeling. <em>Psychological Methods</em>, <b>13</b>, 182-202. 
+ 
+<p>Cheung, M. W.-L. (2008). A model for integrating fixed-, random-, and mixed-effects meta-analyses into structural equation modeling. <em>Psychological Methods</em>, <b>13</b>, 182-202.  
 </p>
-<p>Cheung, M. W.-L. (2009). Constructing approximate confidence intervals for parameters with structural equation models. <em>Structural Equation Modeling</em>, <b>16</b>, 267-294.
+<p>Cheung, M. W.-L. (2009). Constructing approximate confidence intervals for parameters with structural equation models. <em>Structural Equation Modeling</em>, <b>16</b>, 267-294. 
 </p>
-<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <em>Structural Equation Modeling</em>, <b>17</b>, 481-509.
+<p>Cheung, M. W.-L. (2010). Fixed-effects meta-analyses as multiple-group structural equation models. <em>Structural Equation Modeling</em>, <b>17</b>, 481-509. 
 </p>
-<p>Cheung, M. W.-L. (2013). Implementing restricted maximum likelihood estimation in structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 157-167. 
+<p>Cheung, M. W.-L. (2013). Implementing restricted maximum likelihood estimation in structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 157-167.  
 </p>
-<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 429-454.
+<p>Cheung, M. W.-L. (2013). Multivariate meta-analysis as structural equation models. <em>Structural Equation Modeling</em>, <b>20</b>, 429-454. 
 </p>
-<p>Cheung, M. W.-L. (2014). Modeling dependent effect sizes with three-level meta-analyses: A structural equation modeling approach. <em>Psychological Methods</em>, <b>19</b>, 211-229.
+<p>Cheung, M. W.-L. (2014). Modeling dependent effect sizes with three-level meta-analyses: A structural equation modeling approach. <em>Psychological Methods</em>, <b>19</b>, 211-229. 
 </p>
-<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <em>Behavior Research Methods</em>, <b>46</b>, 29-40. 
+<p>Cheung, M. W.-L. (2014). Fixed- and random-effects meta-analytic structural equation modeling: Examples and analyses in R. <em>Behavior Research Methods</em>, <b>46</b>, 29-40.  
 </p>
-<p>Cheung, M. W.-L. (2015). metaSEM: An R package for meta-analysis using structural equation modeling. <em>Frontiers in Psychology</em>, <b>5</b>, 1521.
+<p>Cheung, M. W.-L. (2015). metaSEM: An R package for meta-analysis using structural equation modeling. <em>Frontiers in Psychology</em>, <b>5</b>, 1521. 
 </p>
-<p>Cheung, M. W.-L. (2015). <em>Meta-Analysis: A Structural Equation Modeling Approach</em>. Chichester, West Sussex: John Wiley \&amp; Sons, Inc.
+<p>Cheung, M. W.-L. (2015). <em>Meta-Analysis: A Structural Equation Modeling Approach</em>. Chichester, West Sussex: John Wiley \&amp; Sons, Inc. 
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2004). Testing dependent correlation coefficients via structural equation modeling. <em>Organizational Research Methods</em>, <b>7</b>, 206-223.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2004). Testing dependent correlation coefficients via structural equation modeling. <em>Organizational Research Methods</em>, <b>7</b>, 206-223. 
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <em>Psychological Methods</em>, <b>10</b>, 40-64.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2005). Meta-analytic structural equation modeling: A two-stage approach. <em>Psychological Methods</em>, <b>10</b>, 40-64. 
 </p>
-<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to
-synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53.
+<p>Cheung, M. W.-L., &amp; Chan, W. (2009). A two-stage approach to synthesizing covariance matrices in meta-analytic structural equation modeling. <em>Structural Equation Modeling</em>, <b>16</b>, 28-53. 
 </p>
-<p>Cheung, M.W.-L., &amp; Cheung, S.-F. (in press). Random-effects models for meta-analytic structural equation modeling: Review, issues, and
-illustrations. <em>Research Synthesis Methods.</em>
+<p>Cheung, M. W.-L., &amp; Cheung, S.-F. (in press). Random-effects models for meta-analytic structural equation modeling: Review, issues, and 
+illustrations. <em>Research Synthesis Methods.</em> 
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
