--- a/manual/pattern.n.html
+++ b/manual/pattern.n.html
@@ -10,55 +10,56 @@
 
 <table width="100%" summary="page for pattern.n {metaSEM}"><tr><td>pattern.n {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Display the Accumulative Sample Sizes for the Covariance Matrix
+<h2>Display the Accumulative Sample Sizes for the Covariance Matrix 
 </h2>
 
 <h3>Description</h3>
 
-<p>It displays the accumulative sample sizes for the
-covariance matrix.
+<p>It displays the accumulative sample sizes for the 
+covariance matrix. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-pattern.n(x, n)
+<pre> 
+pattern.n(x, n) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
 <p>A list of square matrices</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>n</code></td>
 <td>
-<p>A vector of sample sizes.
+<p>A vector of sample sizes. 
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Value</h3>
 
-<p>A square matrix of the accumulative sample sizes of the
-input matrices.
+<p>A square matrix of the accumulative sample sizes of the 
+input matrices. 
 </p>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Show the pattern of missing data
-pattern.n(Hunter83$data, Hunter83$n)
+<pre><code class="r">## Show the pattern of missing data 
+pattern.n(Hunter83$data, Hunter83$n) 
 </code></pre>
 
 <pre><code>##             Ability Knowledge Work sample Supervisor
@@ -68,13 +69,13 @@ pattern.n(Hunter83$data, Hunter83$n)
 ## Supervisor     3605      3322        3231       3765
 </code></pre>
 
-<pre><code class="r">#             Ability Knowledge Work sample Supervisor
-# Ability        3815      3372        3281       3605
-# Knowledge      3372      3532        2998       3322
-# Work sample    3281      2998        3441       3231
-# Supervisor     3605      3322        3231       3765
+<pre><code class="r">#             Ability Knowledge Work sample Supervisor 
+# Ability        3815      3372        3281       3605 
+# Knowledge      3372      3532        2998       3322 
+# Work sample    3281      2998        3441       3231 
+# Supervisor     3605      3322        3231       3765 
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
