--- a/manual/print.html
+++ b/manual/print.html
@@ -5,68 +5,69 @@
 
 <table width="100%" summary="page for print {metaSEM}"><tr><td>print {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Print Methods for <code>tssem1FEM</code>, <code>tssem1FEM.cluster</code>,
-<code>tssem1REM</code>, <code>wls</code>, <code>meta</code>, <code>meta3X</code> and <code>reml</code> Objects 
+<h2>Print Methods for <code>tssem1FEM</code>, <code>tssem1FEM.cluster</code>, 
+<code>tssem1REM</code>, <code>wls</code>, <code>meta</code>, <code>meta3X</code> and <code>reml</code> Objects  
 </h2>
 
 <h3>Description</h3>
 
-<p>Print methods for either <code>tssem1FEM</code>,
-<code>tssem1FEM.cluster</code>, <code>tssem1REM</code>, <code>wls</code>,
-<code>meta</code>, <code>meta3X</code> or <code>reml</code> objects.
+<p>Print methods for either <code>tssem1FEM</code>, 
+<code>tssem1FEM.cluster</code>, <code>tssem1REM</code>, <code>wls</code>, 
+<code>meta</code>, <code>meta3X</code> or <code>reml</code> objects. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
+<pre> 
 ## S3 method for class 'tssem1FEM'
-print(x, ...)
+print(x, ...) 
 ## S3 method for class 'tssem1FEM.cluster'
-print(x, ...)
+print(x, ...) 
 ## S3 method for class 'tssem1REM'
-print(x, ...)
+print(x, ...) 
 ## S3 method for class 'wls'
-print(x, ...)
+print(x, ...) 
 ## S3 method for class 'meta'
-print(x, ...)
+print(x, ...) 
 ## S3 method for class 'meta3X'
-print(x, ...)
+print(x, ...) 
 ## S3 method for class 'reml'
-print(x, ...)
+print(x, ...) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
-<p>An object returned from either class
-<code>tssem1FEM</code>, class <code>tssem1FEM.cluster</code>, class <code>tssem1REM</code>,
-class <code>wls</code>, class <code>meta</code>, class <code>meta3X</code> or class <code>reml</code>
+<p>An object returned from either class 
+<code>tssem1FEM</code>, class <code>tssem1FEM.cluster</code>, class <code>tssem1REM</code>, 
+class <code>wls</code>, class <code>meta</code>, class <code>meta3X</code> or class <code>reml</code> 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>...</code></td>
 <td>
-<p>Further arguments to be passed to <code>summary.default</code>
+<p>Further arguments to be passed to <code>summary.default</code> 
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>See Also</h3>
 
- <p><code><a href="tssem1.html">tssem1</a></code>, <code><a href="wls.html">wls</a></code>,
-<code><a href="meta.html">meta</a></code>,  <code><a href="reml.html">reml</a></code>
+ <p><code><a href="tssem1.html">tssem1</a></code>, <code><a href="wls.html">wls</a></code>, 
+<code><a href="meta.html">meta</a></code>,  <code><a href="reml.html">reml</a></code> 
 
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
