--- a/manual/Diag.html
+++ b/manual/Diag.html
@@ -10,81 +10,82 @@
 
 <table width="100%" summary="page for Diag {metaSEM}"><tr><td>Diag {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Matrix Diagonals
+<h2>Matrix Diagonals 
 </h2>
 
 <h3>Description</h3>
 
-<p>Extract or replace the diagonal of a matrix, or construct a diagonal matrix with the same behaviors as <code>diag</code> prior to R-3.0.0.
+<p>Extract or replace the diagonal of a matrix, or construct a diagonal matrix with the same behaviors as <code>diag</code> prior to R-3.0.0. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-Diag(x, ...)
-Diag(x) &lt;- value
+<pre> 
+Diag(x, ...) 
+Diag(x) &lt;- value 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
 <p>a matrix, vector or 1D array, or missing.</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>...</code></td>
 <td>
-<p>Optional dimensions (<code>nrow</code> and <code>ncol</code>) for the result when <code>x</code> is
+<p>Optional dimensions (<code>nrow</code> and <code>ncol</code>) for the result when <code>x</code> is 
 not a matrix.</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>value</code></td>
 <td>
-<p>either a single value or a vector of length equal to that
-of the current diagonal.  Should be of a mode which can be coerced
+<p>either a single value or a vector of length equal to that 
+of the current diagonal.  Should be of a mode which can be coerced 
 to that of <code>x</code>.</p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Details</h3>
 
-<p>Started from R-3.0.0, <code>diag(x)</code> returns a numeric matrix with NA in the
-diagonals when x is a character vector. Although this follows exactly what the manual says, this
-breaks the metaSEM. The <code>Diag</code> has the same functions as
-<code>diag</code> except that <code>Diag(x)</code> works for a character vector of
-x by returning a square matrix of character &quot;0&quot; with <code>x</code> as the
-diagonals.
+<p>Started from R-3.0.0, <code>diag(x)</code> returns a numeric matrix with NA in the 
+diagonals when x is a character vector. Although this follows exactly what the manual says, this 
+breaks the metaSEM. The <code>Diag</code> has the same functions as 
+<code>diag</code> except that <code>Diag(x)</code> works for a character vector of 
+x by returning a square matrix of character &quot;0&quot; with <code>x</code> as the 
+diagonals. 
 
 </p>
 
 
 <h3>Note</h3>
 
-<p>See
-http://r.789695.n4.nabble.com/Behaviors-of-diag-with-character-vector-in-R-3-0-0-td4663735.html
-for the discussion.
+<p>See 
+http://r.789695.n4.nabble.com/Behaviors-of-diag-with-character-vector-in-R-3-0-0-td4663735.html 
+for the discussion. 
 
 </p>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>See Also</h3>
 
-<p><code><a href="../../base/html/diag.html">diag</a></code>
+<p><code><a href="../../base/html/diag.html">diag</a></code> 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">v &lt;- c(&quot;a&quot;, &quot;b&quot;)
-Diag(v)
+<pre><code class="r">v &lt;- c(&quot;a&quot;, &quot;b&quot;) 
+Diag(v) 
 </code></pre>
 
 <pre><code>##      [,1] [,2]
@@ -93,5 +94,5 @@ Diag(v)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
