--- a/manual/Norton13.html
+++ b/manual/Norton13.html
@@ -10,14 +10,15 @@
 
 <table width="100%" summary="page for Norton13 {metaSEM}"><tr><td>Norton13 {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Studies on the Hospital Anxiety and Depression Scale Reported by Norton et al. (2013)
+<h2>Studies on the Hospital Anxiety and Depression Scale Reported by Norton et al. (2013) 
 </h2>
 
 <h3>Description</h3>
 
-<p>The data set includes 28 studies on 14 items measuring the
-Hospital Anxiety and Depression Scale (HADS) Reported by Norton et
-al. (2013).
+ 
+<p>The data set includes 28 studies on 14 items measuring the 
+Hospital Anxiety and Depression Scale (HADS) Reported by Norton et 
+al. (2013). 
 </p>
 
 
@@ -28,42 +29,45 @@ al. (2013).
 
 <h3>Details</h3>
 
-<p>The variables are:
+ 
+<p>The variables are: 
 </p>
-
+ 
 <dl>
-<dt>data</dt><dd><p>A list of 28 studies of correlation matrices. The
+<dt>data</dt><dd><p>A list of 28 studies of correlation matrices. The 
 variables are 14 items (x1 to x14) measuring HADS.</p>
-</dd>
+</dd> 
 <dt>n</dt><dd><p>A vector of sample sizes</p>
-</dd>
+</dd> 
 <dt>population</dt><dd><p>A vector of population of the data</p>
-</dd>
-<dt>group</dt><dd><p>A vector of classification into <em>patients</em>
+</dd> 
+<dt>group</dt><dd><p>A vector of classification into <em>patients</em> 
 vs. <em>non-patients</em> based on population</p>
-</dd>
+</dd> 
 </dl>
-
+ 
 
 
 <h3>Source</h3>
 
-<p>Norton, S., Cosco, T., Doyle, F., Done, J., &amp; Sacker, A. (2013). The Hospital Anxiety and Depression Scale: A meta confirmatory factor analysis. <em>Journal of Psychosomatic Research</em>, <em>74</em>(1), 74-81.
+ 
+<p>Norton, S., Cosco, T., Doyle, F., Done, J., &amp; Sacker, A. (2013). The Hospital Anxiety and Depression Scale: A meta confirmatory factor analysis. <em>Journal of Psychosomatic Research</em>, <em>74</em>(1), 74-81. 
 </p>
 
 
 <h3>References</h3>
 
-<p>Jak, S., &amp; Cheung, M. W.-L. (2015). Addressing heterogeneity in meta-analytic structural equation modeling using subgroup
-analysis. <em>Manuscript in preparation</em>.
+ 
+<p>Jak, S., &amp; Cheung, M. W.-L. (2015). Addressing heterogeneity in meta-analytic structural equation modeling using subgroup 
+analysis. <em>Manuscript in preparation</em>. 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">data(Norton13)
+<pre><code class="r">data(Norton13) 
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
