--- a/manual/anova.html
+++ b/manual/anova.html
@@ -10,93 +10,94 @@
 
 <table width="100%" summary="page for anova {metaSEM}"><tr><td>anova {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Compare Nested Models with Likelihood Ratio Statistic
+<h2>Compare Nested Models with Likelihood Ratio Statistic 
 </h2>
 
 <h3>Description</h3>
 
-<p>It compares nested models with the likelihood ratio
-statistic from either <code>wls</code>, <code>meta</code>, <code>meta3X</code> or
-<code>reml</code> objects. It is a wrapper of <code><a href="../../OpenMx/html/mxCompare.html">mxCompare</a></code>.
+<p>It compares nested models with the likelihood ratio 
+statistic from either <code>wls</code>, <code>meta</code>, <code>meta3X</code> or 
+<code>reml</code> objects. It is a wrapper of <code><a href="../../OpenMx/html/mxCompare.html">mxCompare</a></code>. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
+<pre> 
 ## S3 method for class 'wls'
-anova(object, ..., all=FALSE)
+anova(object, ..., all=FALSE) 
 ## S3 method for class 'meta'
-anova(object, ..., all=FALSE)
+anova(object, ..., all=FALSE) 
 ## S3 method for class 'meta3X'
-anova(object, ..., all=FALSE)
+anova(object, ..., all=FALSE) 
 ## S3 method for class 'reml'
-anova(object, ..., all=FALSE)
+anova(object, ..., all=FALSE) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>object</code></td>
 <td>
-<p>An object or a list of objects of either class
-<code><a href="wls.html">wls</a></code>, class <code><a href="meta.html">meta</a></code>, class <code><a href="meta3.html">meta3</a></code> or
-class <code><a href="reml.html">reml</a></code>. It will be passed to the
-<code>base</code> argument in <code><a href="../../OpenMx/html/mxCompare.html">mxCompare</a></code>.
+<p>An object or a list of objects of either class 
+<code><a href="wls.html">wls</a></code>, class <code><a href="meta.html">meta</a></code>, class <code><a href="meta3.html">meta3</a></code> or 
+class <code><a href="reml.html">reml</a></code>. It will be passed to the 
+<code>base</code> argument in <code><a href="../../OpenMx/html/mxCompare.html">mxCompare</a></code>. 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>...</code></td>
 <td>
-<p>An object or a list of objects of either class
-<code><a href="wls.html">wls</a></code>, class <code><a href="meta.html">meta</a></code>, class <code><a href="meta3.html">meta3</a></code> or
-class <code><a href="reml.html">reml</a></code>. It will be passed to the
-<code>comparison</code> argument in <code><a href="../../OpenMx/html/mxCompare.html">mxCompare</a></code>.
+<p>An object or a list of objects of either class 
+<code><a href="wls.html">wls</a></code>, class <code><a href="meta.html">meta</a></code>, class <code><a href="meta3.html">meta3</a></code> or 
+class <code><a href="reml.html">reml</a></code>. It will be passed to the 
+<code>comparison</code> argument in <code><a href="../../OpenMx/html/mxCompare.html">mxCompare</a></code>. 
 </p>
-</td></tr>  
+</td></tr>   
 <tr valign="top"><td><code>all</code></td>
 <td>
-<p>A boolean value on whether to compare all bases with all
-comparisons. It will be passed to the <code>all</code> argument in
+<p>A boolean value on whether to compare all bases with all 
+comparisons. It will be passed to the <code>all</code> argument in 
 <code><a href="../../OpenMx/html/mxCompare.html">mxCompare</a></code>.</p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Value</h3>
 
-<p>A table of comparisons between the models in base and comparison.
+<p>A table of comparisons between the models in base and comparison. 
 </p>
 
 
 <h3>Note</h3>
 
-<p>When the objects are class <code><a href="wls.html">wls</a></code>, the degrees
-of freedom in the base and comparison models are incorrect, while the degrees of
-freedom on the difference between them is correct. If users want to
-obtain the correct degrees of freedom in the base and comparison
-models, they may individually apply the <code><a href="summary.html">summary</a></code> function on
-the base and comparison models.
+<p>When the objects are class <code><a href="wls.html">wls</a></code>, the degrees 
+of freedom in the base and comparison models are incorrect, while the degrees of 
+freedom on the difference between them is correct. If users want to 
+obtain the correct degrees of freedom in the base and comparison 
+models, they may individually apply the <code><a href="summary.html">summary</a></code> function on 
+the base and comparison models. 
 </p>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Test the significance of a predictor with likelihood ratio test
-## Model0: No predictor
-model0 &lt;- meta(y=yi, v=vi, data=Hox02, model.name=&quot;No predictor&quot;)
+<pre><code class="r">## Test the significance of a predictor with likelihood ratio test 
+## Model0: No predictor 
+model0 &lt;- meta(y=yi, v=vi, data=Hox02, model.name=&quot;No predictor&quot;) 
 
-## Model1: With a predictor
-model1 &lt;- meta(y=yi, v=vi, x=weeks, data=Hox02, model.name=&quot;One predictor&quot;)
+## Model1: With a predictor 
+model1 &lt;- meta(y=yi, v=vi, x=weeks, data=Hox02, model.name=&quot;One predictor&quot;) 
 
-## Compare these two models
-anova(model1, model0) 
+## Compare these two models 
+anova(model1, model0)  
 </code></pre>
 
 <pre><code>##            base   comparison ep minus2LL df        AIC   diffLL diffdf
@@ -108,5 +109,5 @@ anova(model1, model0)
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
