--- a/manual/bdiagMat.html
+++ b/manual/bdiagMat.html
@@ -10,37 +10,38 @@
 
 <table width="100%" summary="page for bdiagMat {metaSEM}"><tr><td>bdiagMat {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Create a Block Diagonal Matrix
+<h2>Create a Block Diagonal Matrix 
 </h2>
 
 <h3>Description</h3>
 
-<p>It creates a block diagonal matrix from a list of numeric
-or character matrices.
+<p>It creates a block diagonal matrix from a list of numeric 
+or character matrices. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-bdiagMat(x)
+<pre> 
+bdiagMat(x) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
-<p>A list of numeric or character matrices (or values)
+<p>A list of numeric or character matrices (or values) 
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Value</h3>
 
-<p>A numeric or character block diagonal matrix
+<p>A numeric or character block diagonal matrix 
 
 
 
@@ -51,29 +52,29 @@ bdiagMat(x)
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>References</h3>
 
-<p>It was based on a function posted by Scott Chasalow at <a href="http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html">http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html</a>.
+<p>It was based on a function posted by Scott Chasalow at <a href="http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html">http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html</a>. 
 
 </p>
 
 
 <h3>See Also</h3>
 
-<p><code><a href="bdiagRep.html">bdiagRep</a></code>, <code><a href="matrix2bdiag.html">matrix2bdiag</a></code>
+<p><code><a href="bdiagRep.html">bdiagRep</a></code>, <code><a href="matrix2bdiag.html">matrix2bdiag</a></code> 
 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Block diagonal matrix of numerics
-bdiagMat( list(matrix(1:4,nrow=2,ncol=2),
-               matrix(5:6,nrow=1,ncol=2)) )
+<pre><code class="r">## Block diagonal matrix of numerics 
+bdiagMat( list(matrix(1:4,nrow=2,ncol=2), 
+               matrix(5:6,nrow=1,ncol=2)) ) 
 </code></pre>
 
 <pre><code>##      [,1] [,2] [,3] [,4]
@@ -82,14 +83,14 @@ bdiagMat( list(matrix(1:4,nrow=2,ncol=2),
 ## [3,]    0    0    5    6
 </code></pre>
 
-<pre><code class="r">#      [,1] [,2] [,3] [,4]
-# [1,]    1    3    0    0
-# [2,]    2    4    0    0
-# [3,]    0    0    5    6
+<pre><code class="r">#      [,1] [,2] [,3] [,4] 
+# [1,]    1    3    0    0 
+# [2,]    2    4    0    0 
+# [3,]    0    0    5    6 
 
-## Block diagonal matrix of characters
-bdiagMat( list(matrix(letters[1:4],nrow=2,ncol=2),
-               matrix(letters[5:6],nrow=1,ncol=2)) )
+## Block diagonal matrix of characters 
+bdiagMat( list(matrix(letters[1:4],nrow=2,ncol=2), 
+               matrix(letters[5:6],nrow=1,ncol=2)) ) 
 </code></pre>
 
 <pre><code>##      [,1] [,2] [,3] [,4]
@@ -98,12 +99,12 @@ bdiagMat( list(matrix(letters[1:4],nrow=2,ncol=2),
 ## [3,] &quot;0&quot;  &quot;0&quot;  &quot;e&quot;  &quot;f&quot;
 </code></pre>
 
-<pre><code class="r">#      [,1] [,2] [,3] [,4]
-# [1,] &quot;a&quot;  &quot;c&quot;  &quot;0&quot;  &quot;0&quot; 
-# [2,] &quot;b&quot;  &quot;d&quot;  &quot;0&quot;  &quot;0&quot; 
-# [3,] &quot;0&quot;  &quot;0&quot;  &quot;e&quot;  &quot;f&quot; 
+<pre><code class="r">#      [,1] [,2] [,3] [,4] 
+# [1,] &quot;a&quot;  &quot;c&quot;  &quot;0&quot;  &quot;0&quot;  
+# [2,] &quot;b&quot;  &quot;d&quot;  &quot;0&quot;  &quot;0&quot;  
+# [3,] &quot;0&quot;  &quot;0&quot;  &quot;e&quot;  &quot;f&quot;  
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
