--- a/manual/bdiagRep.html
+++ b/manual/bdiagRep.html
@@ -10,43 +10,44 @@
 
 <table width="100%" summary="page for bdiagRep {metaSEM}"><tr><td>bdiagRep {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Create a Block Diagonal Matrix by Repeating the Input
+<h2>Create a Block Diagonal Matrix by Repeating the Input 
 </h2>
 
 <h3>Description</h3>
 
-<p>It creates a block diagonal matrix by repeating the input
-matrix several times.
+<p>It creates a block diagonal matrix by repeating the input 
+matrix several times. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-bdiagRep(x, times)
+<pre> 
+bdiagRep(x, times) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
-<p>A numeric or character matrix (or values)
+<p>A numeric or character matrix (or values) 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>times</code></td>
 <td>
-<p>Number of times of <code>x</code> to be repeated
+<p>Number of times of <code>x</code> to be repeated 
 
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Value</h3>
 
-<p>A numeric or character block diagonal matrix
+<p>A numeric or character block diagonal matrix 
 
 
 
@@ -57,22 +58,22 @@ bdiagRep(x, times)
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 
 </p>
 
 
 <h3>See Also</h3>
 
- <p><code><a href="bdiagMat.html">bdiagMat</a></code>, <code><a href="matrix2bdiag.html">matrix2bdiag</a></code>
+ <p><code><a href="bdiagMat.html">bdiagMat</a></code>, <code><a href="matrix2bdiag.html">matrix2bdiag</a></code> 
 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Block diagonal matrix of numerics
-bdiagRep( matrix(1:4,nrow=2,ncol=2), 2 )
+<pre><code class="r">## Block diagonal matrix of numerics 
+bdiagRep( matrix(1:4,nrow=2,ncol=2), 2 ) 
 </code></pre>
 
 <pre><code>##      [,1] [,2] [,3] [,4]
@@ -82,14 +83,14 @@ bdiagRep( matrix(1:4,nrow=2,ncol=2), 2 )
 ## [4,]    0    0    2    4
 </code></pre>
 
-<pre><code class="r">#      [,1] [,2] [,3] [,4]
-# [1,]    1    3    0    0
-# [2,]    2    4    0    0
-# [3,]    0    0    1    3
-# [4,]    0    0    2    4
+<pre><code class="r">#      [,1] [,2] [,3] [,4] 
+# [1,]    1    3    0    0 
+# [2,]    2    4    0    0 
+# [3,]    0    0    1    3 
+# [4,]    0    0    2    4 
 
-## Block diagonal matrix of characters
-bdiagRep( matrix(letters[1:4],nrow=2,ncol=2), 2 )
+## Block diagonal matrix of characters 
+bdiagRep( matrix(letters[1:4],nrow=2,ncol=2), 2 ) 
 </code></pre>
 
 <pre><code>##      [,1] [,2] [,3] [,4]
@@ -99,13 +100,13 @@ bdiagRep( matrix(letters[1:4],nrow=2,ncol=2), 2 )
 ## [4,] &quot;0&quot;  &quot;0&quot;  &quot;b&quot;  &quot;d&quot;
 </code></pre>
 
-<pre><code class="r">#      [,1] [,2] [,3] [,4]
-# [1,] &quot;a&quot;  &quot;c&quot;  &quot;0&quot;  &quot;0&quot; 
-# [2,] &quot;b&quot;  &quot;d&quot;  &quot;0&quot;  &quot;0&quot; 
-# [3,] &quot;0&quot;  &quot;0&quot;  &quot;a&quot;  &quot;c&quot; 
-# [4,] &quot;0&quot;  &quot;0&quot;  &quot;b&quot;  &quot;d&quot; 
+<pre><code class="r">#      [,1] [,2] [,3] [,4] 
+# [1,] &quot;a&quot;  &quot;c&quot;  &quot;0&quot;  &quot;0&quot;  
+# [2,] &quot;b&quot;  &quot;d&quot;  &quot;0&quot;  &quot;0&quot;  
+# [3,] &quot;0&quot;  &quot;0&quot;  &quot;a&quot;  &quot;c&quot;  
+# [4,] &quot;0&quot;  &quot;0&quot;  &quot;b&quot;  &quot;d&quot;  
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
