--- a/manual/create.mxMatrix.html
+++ b/manual/create.mxMatrix.html
@@ -10,115 +10,116 @@
 
 <table width="100%" summary="page for create.mxMatrix {metaSEM}"><tr><td>create.mxMatrix {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Create a Vector into MxMatrix-class
+<h2>Create a Vector into MxMatrix-class 
 </h2>
 
 <h3>Description</h3>
 
-<p>It converts a vector into <code>MxMatrix-class</code> via <code>mxMatrix</code>.
+<p>It converts a vector into <code>MxMatrix-class</code> via <code>mxMatrix</code>. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-create.mxMatrix(x, type=c("Full","Symm","Diag","Stand"), ncol=NA,
-nrow=NA, as.mxMatrix=TRUE, byrow=FALSE, ...) 
+<pre> 
+create.mxMatrix(x, type=c("Full","Symm","Diag","Stand"), ncol=NA, 
+nrow=NA, as.mxMatrix=TRUE, byrow=FALSE, ...)  
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
-<p>A character or numeric vector 
+<p>A character or numeric vector  
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>type</code></td>
 <td>
-<p>Matrix type similar to those listed in
-<code><a href="../../OpenMx/html/mxMatrix.html">mxMatrix</a></code>
+<p>Matrix type similar to those listed in 
+<code><a href="../../OpenMx/html/mxMatrix.html">mxMatrix</a></code> 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>ncol</code></td>
 <td>
-<p>Number of columns. It is necessary when
-<code>type="Full"</code>. It is ignored and determined by the length of
-<code>x</code> for the other types of matrices.
+<p>Number of columns. It is necessary when 
+<code>type="Full"</code>. It is ignored and determined by the length of 
+<code>x</code> for the other types of matrices. 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>nrow</code></td>
 <td>
-<p>Number of rows. It is necessary when
-<code>type="Full"</code>. It is ignored and determined by the length of
-<code>x</code> for the other types of matrices.
+<p>Number of rows. It is necessary when 
+<code>type="Full"</code>. It is ignored and determined by the length of 
+<code>x</code> for the other types of matrices. 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>as.mxMatrix</code></td>
 <td>
-<p>Logical. If it is <code>TRUE</code>, the output is a matrix of
+<p>Logical. If it is <code>TRUE</code>, the output is a matrix of 
 <code>MxMatrix-class</code>. If it is <code>FALSE</code>, it is a numeric matrix.</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>byrow</code></td>
 <td>
-<p>Logical. If <code>FALSE</code> (the default) the matrix is filled by columns, otherwise the matrix is filled by rows.
+<p>Logical. If <code>FALSE</code> (the default) the matrix is filled by columns, otherwise the matrix is filled by rows. 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>...</code></td>
 <td>
-<p>Further arguments to be passed to
-<code><a href="../../OpenMx/html/mxMatrix.html">mxMatrix</a></code>. Please note that <code>type</code>,
-<code>nrow</code>, <code>ncol</code>, <code>values</code>, <code>free</code> and <code>labels</code> will be created automatically. Thus, these arguments
-excepts labels should be avoided in ... 
+<p>Further arguments to be passed to 
+<code><a href="../../OpenMx/html/mxMatrix.html">mxMatrix</a></code>. Please note that <code>type</code>, 
+<code>nrow</code>, <code>ncol</code>, <code>values</code>, <code>free</code> and <code>labels</code> will be created automatically. Thus, these arguments 
+excepts labels should be avoided in ...  
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Details</h3>
 
-<p>If there are non-numeric values in <code>x</code>, they are treated
-as the labels of the free parameters. If an &quot;*&quot; is
-present, the numeric value on the left hand side will be treated as
-the starting value for a free parameter or a fixed value for a fixed parameter. If it is a matrix of numeric values, there is
-no free parameters in the output matrix. <code>nrow</code> and <code>ncol</code>
-will be calculated from the length of <code>x</code> unless
-<code>type="Full"</code> is specified.
+<p>If there are non-numeric values in <code>x</code>, they are treated 
+as the labels of the free parameters. If an &quot;*&quot; is 
+present, the numeric value on the left hand side will be treated as 
+the starting value for a free parameter or a fixed value for a fixed parameter. If it is a matrix of numeric values, there is 
+no free parameters in the output matrix. <code>nrow</code> and <code>ncol</code> 
+will be calculated from the length of <code>x</code> unless 
+<code>type="Full"</code> is specified. 
 </p>
 
 
 <h3>Value</h3>
 
-<p>A <code><a href="../../OpenMx/html/MxMatrix-class.html">MxMatrix-class</a></code> object with the same
-dimensions as <code>x</code>
+<p>A <code><a href="../../OpenMx/html/MxMatrix-class.html">MxMatrix-class</a></code> object with the same 
+dimensions as <code>x</code> 
 </p>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>See Also</h3>
 
- <p><code><a href="../../OpenMx/html/mxMatrix.html">mxMatrix</a></code>,
-<code><a href="create.mxMatrix.html">create.mxMatrix</a></code>,  <code><a href="create.Fmatrix.html">create.Fmatrix</a></code>
+ <p><code><a href="../../OpenMx/html/mxMatrix.html">mxMatrix</a></code>, 
+<code><a href="create.mxMatrix.html">create.mxMatrix</a></code>,  <code><a href="create.Fmatrix.html">create.Fmatrix</a></code> 
 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">## a and b are free parameters with starting values and labels
-(a1 &lt;- c(1:4, &quot;5*a&quot;, 6, &quot;7*b&quot;, 8, 9))
+<pre><code class="r">## a and b are free parameters with starting values and labels 
+(a1 &lt;- c(1:4, &quot;5*a&quot;, 6, &quot;7*b&quot;, 8, 9)) 
 </code></pre>
 
 <pre><code>## [1] &quot;1&quot;   &quot;2&quot;   &quot;3&quot;   &quot;4&quot;   &quot;5*a&quot; &quot;6&quot;   &quot;7*b&quot; &quot;8&quot;   &quot;9&quot;
 </code></pre>
 
-<pre><code class="r">(mat1 &lt;- create.mxMatrix(a1, ncol=3, nrow=3, name=&quot;mat1&quot;))
+<pre><code class="r">(mat1 &lt;- create.mxMatrix(a1, ncol=3, nrow=3, name=&quot;mat1&quot;)) 
 </code></pre>
 
 <pre><code>## FullMatrix &#39;mat1&#39; 
@@ -146,8 +147,8 @@ dimensions as <code>x</code>
 ## $ubound: No upper bounds assigned.
 </code></pre>
 
-<pre><code class="r">## Arrange the elements by row
-(mat2 &lt;- create.mxMatrix(a1, ncol=3, nrow=3, as.mxMatrix=FALSE, byrow=TRUE))
+<pre><code class="r">## Arrange the elements by row 
+(mat2 &lt;- create.mxMatrix(a1, ncol=3, nrow=3, as.mxMatrix=FALSE, byrow=TRUE)) 
 </code></pre>
 
 <pre><code>##      [,1]  [,2]  [,3]
@@ -156,13 +157,13 @@ dimensions as <code>x</code>
 ## [3,] &quot;7*b&quot; &quot;8&quot;   &quot;9&quot;
 </code></pre>
 
-<pre><code class="r">(a3 &lt;- c(1:3, &quot;4*f4&quot;, &quot;5*f5&quot;, &quot;6*f6&quot;))
+<pre><code class="r">(a3 &lt;- c(1:3, &quot;4*f4&quot;, &quot;5*f5&quot;, &quot;6*f6&quot;)) 
 </code></pre>
 
 <pre><code>## [1] &quot;1&quot;    &quot;2&quot;    &quot;3&quot;    &quot;4*f4&quot; &quot;5*f5&quot; &quot;6*f6&quot;
 </code></pre>
 
-<pre><code class="r">(mat3 &lt;- create.mxMatrix(a3, type=&quot;Symm&quot;, name=&quot;mat3&quot;))
+<pre><code class="r">(mat3 &lt;- create.mxMatrix(a3, type=&quot;Symm&quot;, name=&quot;mat3&quot;)) 
 </code></pre>
 
 <pre><code>## SymmMatrix &#39;mat3&#39; 
@@ -190,8 +191,8 @@ dimensions as <code>x</code>
 ## $ubound: No upper bounds assigned.
 </code></pre>
 
-<pre><code class="r">## Create character matrix
-(mat4 &lt;- create.mxMatrix(a3, type=&quot;Symm&quot;, as.mxMatrix=FALSE))
+<pre><code class="r">## Create character matrix 
+(mat4 &lt;- create.mxMatrix(a3, type=&quot;Symm&quot;, as.mxMatrix=FALSE)) 
 </code></pre>
 
 <pre><code>##      [,1] [,2]   [,3]  
@@ -200,8 +201,8 @@ dimensions as <code>x</code>
 ## [3,] &quot;3&quot;  &quot;5*f5&quot; &quot;6*f6&quot;
 </code></pre>
 
-<pre><code class="r">## Arrange the elements by row
-(mat5 &lt;- create.mxMatrix(a3, type=&quot;Symm&quot;, as.mxMatrix=FALSE, byrow=TRUE))
+<pre><code class="r">## Arrange the elements by row 
+(mat5 &lt;- create.mxMatrix(a3, type=&quot;Symm&quot;, as.mxMatrix=FALSE, byrow=TRUE)) 
 </code></pre>
 
 <pre><code>##      [,1]   [,2]   [,3]  
@@ -210,7 +211,7 @@ dimensions as <code>x</code>
 ## [3,] &quot;4*f4&quot; &quot;5*f5&quot; &quot;6*f6&quot;
 </code></pre>
 
-<pre><code class="r">(mat6 &lt;- create.mxMatrix(a3, type=&quot;Diag&quot;, lbound=6:1, name=&quot;mat6&quot;))
+<pre><code class="r">(mat6 &lt;- create.mxMatrix(a3, type=&quot;Diag&quot;, lbound=6:1, name=&quot;mat6&quot;)) 
 </code></pre>
 
 <pre><code>## DiagMatrix &#39;mat6&#39; 
@@ -255,5 +256,5 @@ dimensions as <code>x</code>
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
