--- a/manual/is.pd.html
+++ b/manual/is.pd.html
@@ -10,108 +10,109 @@
 
 <table width="100%" summary="page for is.pd {metaSEM}"><tr><td>is.pd {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Test Positive Definiteness of a List of Square Matrices
+<h2>Test Positive Definiteness of a List of Square Matrices 
 </h2>
 
 <h3>Description</h3>
 
-<p>It tests the positive definiteness of a square matrix or a
-list of square matrices. It returns <code>TRUE</code> if the matrix is
-positive definite. It returns <code>FALSE</code> if the matrix is either
-non-positive definite or not symmetric. Variables with <code>NA</code> in the diagonals will be removed
-before testing. It returns <code>NA</code> when there are missing correlations even after deleting
-the missing variables.
+<p>It tests the positive definiteness of a square matrix or a 
+list of square matrices. It returns <code>TRUE</code> if the matrix is 
+positive definite. It returns <code>FALSE</code> if the matrix is either 
+non-positive definite or not symmetric. Variables with <code>NA</code> in the diagonals will be removed 
+before testing. It returns <code>NA</code> when there are missing correlations even after deleting 
+the missing variables. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-is.pd(x, check.asyCov=FALSE, cor.analysis=TRUE, tol=1e-06)
+<pre> 
+is.pd(x, check.asyCov=FALSE, cor.analysis=TRUE, tol=1e-06) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
 <p>A square matrix or a list of square matrices</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>check.asyCov</code></td>
 <td>
-<p>If it is <code>TRUE</code>, it mirrors the checking in
+<p>If it is <code>TRUE</code>, it mirrors the checking in 
 <code><a href="asyCov.html">asyCov</a></code>.</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>cor.analysis</code></td>
 <td>
-<p>Whether the input matrix is a correlation or a
+<p>Whether the input matrix is a correlation or a 
 covariance matrix. It is ignored when <code>check.asyCov=FALSE</code>.</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>tol</code></td>
 <td>
-<p>Relative tolerance of positiveness of smallest eigenvalue compared
-to largest eigenvalue. The matrix is considered positive definite if the
-ratio of the smallest eigenvalue to the largest eigenvalue is larger than
-<code>tol</code>. See <code><a href="../../Matrix/html/nearPD.html">nearPD</a></code>
+<p>Relative tolerance of positiveness of smallest eigenvalue compared 
+to largest eigenvalue. The matrix is considered positive definite if the 
+ratio of the smallest eigenvalue to the largest eigenvalue is larger than 
+<code>tol</code>. See <code><a href="../../Matrix/html/nearPD.html">nearPD</a></code> 
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Value</h3>
 
-<p>If the input is a matrix, it returns <code>TRUE</code>, <code>FALSE</code>
-or <code>NA</code>. If the input is a list of matrices, it returns
-a list of <code>TRUE</code>, <code>FALSE</code> or <code>NA</code>.
+<p>If the input is a matrix, it returns <code>TRUE</code>, <code>FALSE</code> 
+or <code>NA</code>. If the input is a list of matrices, it returns 
+a list of <code>TRUE</code>, <code>FALSE</code> or <code>NA</code>. 
 </p>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">A &lt;- diag(1,3)
-is.pd(A)
+<pre><code class="r">A &lt;- diag(1,3) 
+is.pd(A) 
 </code></pre>
 
 <pre><code>## [1] TRUE
 </code></pre>
 
-<pre><code class="r"># TRUE
+<pre><code class="r"># TRUE 
 
-B &lt;- matrix(c(1,2,2,1), ncol=2)
-is.pd(B)
+B &lt;- matrix(c(1,2,2,1), ncol=2) 
+is.pd(B) 
 </code></pre>
 
 <pre><code>## [1] FALSE
 </code></pre>
 
-<pre><code class="r"># FALSE
+<pre><code class="r"># FALSE 
 
-is.pd(list(A, B))
+is.pd(list(A, B)) 
 </code></pre>
 
 <pre><code>## [1]  TRUE FALSE
 </code></pre>
 
-<pre><code class="r"># TRUE FALSE
+<pre><code class="r"># TRUE FALSE 
 
-C &lt;- A
-C[2,1] &lt;- C[1,2] &lt;- NA
-is.pd(C)
+C &lt;- A 
+C[2,1] &lt;- C[1,2] &lt;- NA 
+is.pd(C) 
 </code></pre>
 
 <pre><code>## [1] NA
 </code></pre>
 
-<pre><code class="r"># NA
+<pre><code class="r"># NA 
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
