--- a/manual/matrix2bdiag.html
+++ b/manual/matrix2bdiag.html
@@ -10,66 +10,67 @@
 
 <table width="100%" summary="page for matrix2bdiag {metaSEM}"><tr><td>matrix2bdiag {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Convert a Matrix into a Block Diagonal Matrix
+<h2>Convert a Matrix into a Block Diagonal Matrix 
 </h2>
 
 <h3>Description</h3>
 
-<p>It converts a matrix into a block diagonal matrix.
+<p>It converts a matrix into a block diagonal matrix. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-matrix2bdiag(x, ...)
+<pre> 
+matrix2bdiag(x, ...) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
-<p>A <i>k</i> x <i>p</i> matrix of numerics or characters. 
+<p>A <i>k</i> x <i>p</i> matrix of numerics or characters.  
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>...</code></td>
 <td>
-<p>Further arguments to be passed to <code><a href="vec2symMat.html">vec2symMat</a></code>
+<p>Further arguments to be passed to <code><a href="vec2symMat.html">vec2symMat</a></code> 
 
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Details</h3>
 
-<p>Each row of <code>x</code> is converted into a symmetric matrix via
-<code><a href="vec2symMat.html">vec2symMat</a></code>. Then the list of the symmetric matrices is
-converted into a block diagonal matrix via a function written by Scott
-Chasalow posted at <a href="http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html">http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html</a>.
+<p>Each row of <code>x</code> is converted into a symmetric matrix via 
+<code><a href="vec2symMat.html">vec2symMat</a></code>. Then the list of the symmetric matrices is 
+converted into a block diagonal matrix via a function written by Scott 
+Chasalow posted at <a href="http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html">http://www.math.yorku.ca/Who/Faculty/Monette/pub/stmp/0827.html</a>. 
 
 </p>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 
 </p>
 
 
 <h3>See Also</h3>
 
- <p><code><a href="vec2symMat.html">vec2symMat</a></code>
+ <p><code><a href="vec2symMat.html">vec2symMat</a></code> 
 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">(m1 &lt;- matrix(1:12, ncol=6, byrow=TRUE))
+<pre><code class="r">(m1 &lt;- matrix(1:12, ncol=6, byrow=TRUE)) 
 </code></pre>
 
 <pre><code>##      [,1] [,2] [,3] [,4] [,5] [,6]
@@ -77,11 +78,11 @@ Chasalow posted at <a href="http://www.math.yorku.ca/Who/Faculty/Monette/pub/stm
 ## [2,]    7    8    9   10   11   12
 </code></pre>
 
-<pre><code class="r">#      [,1] [,2] [,3] [,4] [,5] [,6]
-# [1,]    1    2    3    4    5    6
-# [2,]    7    8    9   10   11   12
+<pre><code class="r">#      [,1] [,2] [,3] [,4] [,5] [,6] 
+# [1,]    1    2    3    4    5    6 
+# [2,]    7    8    9   10   11   12 
 
-matrix2bdiag(m1)
+matrix2bdiag(m1) 
 </code></pre>
 
 <pre><code>##      [,1] [,2] [,3] [,4] [,5] [,6]
@@ -93,15 +94,15 @@ matrix2bdiag(m1)
 ## [6,]    0    0    0    9   11   12
 </code></pre>
 
-<pre><code class="r">#      [,1] [,2] [,3] [,4] [,5] [,6]
-# [1,]    1    2    3    0    0    0
-# [2,]    2    4    5    0    0    0
-# [3,]    3    5    6    0    0    0
-# [4,]    0    0    0    7    8    9
-# [5,]    0    0    0    8   10   11
-# [6,]    0    0    0    9   11   12
+<pre><code class="r">#      [,1] [,2] [,3] [,4] [,5] [,6] 
+# [1,]    1    2    3    0    0    0 
+# [2,]    2    4    5    0    0    0 
+# [3,]    3    5    6    0    0    0 
+# [4,]    0    0    0    7    8    9 
+# [5,]    0    0    0    8   10   11 
+# [6,]    0    0    0    9   11   12 
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
