--- a/manual/pattern.na.html
+++ b/manual/pattern.na.html
@@ -10,56 +10,57 @@
 
 <table width="100%" summary="page for pattern.na {metaSEM}"><tr><td>pattern.na {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Display the Pattern of Missing Data of a List of Square Matrices
+<h2>Display the Pattern of Missing Data of a List of Square Matrices 
 </h2>
 
 <h3>Description</h3>
 
-<p>It displays the pattern of missing data (or pattern of data
-that are present) of a list of square matrices with the same dimensions.
+<p>It displays the pattern of missing data (or pattern of data 
+that are present) of a list of square matrices with the same dimensions. 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-pattern.na(x, show.na = TRUE)
+<pre> 
+pattern.na(x, show.na = TRUE) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>x</code></td>
 <td>
 <p>A list of square matrices</p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>show.na</code></td>
 <td>
-<p>If it is <code>TRUE</code>, it shows the pattern of missing
-data. If it is <code>FALSE</code>, it shows the pattern of data that are present.
+<p>If it is <code>TRUE</code>, it shows the pattern of missing 
+data. If it is <code>FALSE</code>, it shows the pattern of data that are present. 
 </p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Value</h3>
 
-<p>A square matrix of numerical values with the same dimensions of the
-input matrices.
+<p>A square matrix of numerical values with the same dimensions of the 
+input matrices. 
 </p>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">## Show the pattern of missing data
-pattern.na(Hunter83$data, show.na=TRUE)
+<pre><code class="r">## Show the pattern of missing data 
+pattern.na(Hunter83$data, show.na=TRUE) 
 </code></pre>
 
 <pre><code>##             Ability Knowledge Work sample Supervisor
@@ -69,14 +70,14 @@ pattern.na(Hunter83$data, show.na=TRUE)
 ## Supervisor        2         3           3          1
 </code></pre>
 
-<pre><code class="r">#             Ability Knowledge Work sample Supervisor
-# Ability           1         3           3          2
-# Knowledge         3         2           4          3
-# Work sample       3         4           2          3
-# Supervisor        2         3           3          1
+<pre><code class="r">#             Ability Knowledge Work sample Supervisor 
+# Ability           1         3           3          2 
+# Knowledge         3         2           4          3 
+# Work sample       3         4           2          3 
+# Supervisor        2         3           3          1 
 
-## Show the pattern of data that are present
-pattern.na(Hunter83$data, show.na=FALSE)
+## Show the pattern of data that are present 
+pattern.na(Hunter83$data, show.na=FALSE) 
 </code></pre>
 
 <pre><code>##             Ability Knowledge Work sample Supervisor
@@ -86,13 +87,13 @@ pattern.na(Hunter83$data, show.na=FALSE)
 ## Supervisor       12        11          11         13
 </code></pre>
 
-<pre><code class="r">#             Ability Knowledge Work sample Supervisor
-# Ability          13        11          11         12
-# Knowledge        11        12          10         11
-# Work sample      11        10          12         11
-# Supervisor       12        11          11         13
+<pre><code class="r">#             Ability Knowledge Work sample Supervisor 
+# Ability          13        11          11         12 
+# Knowledge        11        12          10         11 
+# Work sample      11        10          12         11 
+# Supervisor       12        11          11         13 
 </code></pre>
 
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
