--- a/manual/rerun.html
+++ b/manual/rerun.html
@@ -10,59 +10,65 @@
 
 <table width="100%" summary="page for rerun {metaSEM}"><tr><td>rerun {metaSEM}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Rerun models via mxTryHard()
+<h2>Rerun models via mxTryHard() 
 </h2>
 
 <h3>Description</h3>
 
-<p>It reruns models via mxTryHard().
+<p>It reruns models via mxTryHard(). 
 </p>
 
 
 <h3>Usage</h3>
 
-<pre>
-rerun(object, ...)
+<pre> 
+rerun(object, ...) 
 </pre>
 
 
 <h3>Arguments</h3>
 
+ 
 <table summary="R argblock">
 <tr valign="top"><td><code>object</code></td>
 <td>
-<p>An object of either class <code>tssem1FEM</code>,
-class <code>tssem1REM</code>, class <code>wls</code>, class <code>meta</code> or class <code>reml</code>.
+<p>An object of either class <code>tssem1FEM</code>, 
+class <code>tssem1REM</code>, class <code>wls</code>, class <code>meta</code> or class <code>reml</code>. 
 </p>
-</td></tr>
+</td></tr> 
 <tr valign="top"><td><code>...</code></td>
 <td>
 <p>Futher arguments to be passed to <code><a href="../../OpenMx/html/mxTryHard.html">mxTryHard</a></code></p>
-</td></tr>
+</td></tr> 
 </table>
 
 
 <h3>Author(s)</h3>
 
-<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt;
+<p>Mike W.-L. Cheung &lt;mikewlcheung@nus.edu.sg&gt; 
 </p>
 
 
 <h3>Examples</h3>
 
-<pre><code class="r">random1 &lt;- tssem1(Digman97$data, Digman97$n, method=&quot;REM&quot;, RE.type=&quot;Diag&quot;)
-random1_rerun &lt;- rerun(random1)
+<pre><code class="r">## \dontrun{ 
+random1 &lt;- tssem1(Digman97$data, Digman97$n, method=&quot;REM&quot;, RE.type=&quot;Diag&quot;) 
+random1_rerun &lt;- rerun(random1) 
 </code></pre>
 
 <pre><code>## 
 ## Begin fit attempt 1 of at maximum 11 tries
-## 
-##  Lowest minimum so far:  -110.845241192874
-## 
+</code></pre>
+
+<pre><code>## 
+##  Lowest minimum so far:  -110.875927545092
+</code></pre>
+
+<pre><code>## 
 ## Solution found
 </code></pre>
 
-<pre><code class="r">summary(random1_rerun)
+<pre><code class="r">summary(random1_rerun) 
 </code></pre>
 
 <pre><code>## 
@@ -75,76 +81,79 @@ random1_rerun &lt;- rerun(random1)
 ## 95% confidence intervals: z statistic approximation
 ## Coefficients:
 ##                Estimate   Std.Error      lbound      ubound z value
-## Intercept1   0.39464552  0.05422319  0.28837002  0.50092103  7.2782
-## Intercept2   0.44009371  0.04125829  0.35922894  0.52095848 10.6668
-## Intercept3   0.05454208  0.06171559 -0.06641826  0.17550242  0.8838
-## Intercept4   0.09866803  0.04621868  0.00808109  0.18925497  2.1348
-## Intercept5   0.42966158  0.04015558  0.35095808  0.50836508 10.6999
-## Intercept6   0.12851180  0.04081614  0.04851363  0.20850996  3.1486
-## Intercept7   0.20525655  0.04959087  0.10806023  0.30245287  4.1390
-## Intercept8   0.23993541  0.03192375  0.17736601  0.30250482  7.5159
-## Intercept9   0.18910279  0.04301436  0.10479620  0.27340938  4.3963
-## Intercept10  0.44413298  0.03254669  0.38034263  0.50792333 13.6460
-## Tau2_1_1     0.03720732  0.01499996  0.00780794  0.06660669  2.4805
-## Tau2_2_2     0.02030540  0.00843481  0.00377348  0.03683732  2.4073
-## Tau2_3_3     0.04821942  0.01972298  0.00956310  0.08687575  2.4448
-## Tau2_4_4     0.02461032  0.01062424  0.00378720  0.04543344  2.3164
-## Tau2_5_5     0.01872485  0.00824743  0.00256019  0.03488952  2.2704
-## Tau2_6_6     0.01825608  0.00878891  0.00103013  0.03548202  2.0772
-## Tau2_7_7     0.02942396  0.01226278  0.00538935  0.05345857  2.3995
-## Tau2_8_8     0.00965101  0.00488241  0.00008167  0.01922036  1.9767
-## Tau2_9_9     0.02093358  0.00912803  0.00304296  0.03882420  2.2933
-## Tau2_10_10   0.01115054  0.00504672  0.00125915  0.02104194  2.2095
+## Intercept1   3.9460e-01  5.4212e-02  2.8835e-01  5.0085e-01  7.2789
+## Intercept2   4.4005e-01  4.1241e-02  3.5922e-01  5.2088e-01 10.6701
+## Intercept3   5.4510e-02  6.1730e-02 -6.6480e-02  1.7550e-01  0.8830
+## Intercept4   9.8644e-02  4.6203e-02  8.0882e-03  1.8920e-01  2.1350
+## Intercept5   4.2958e-01  4.0146e-02  3.5090e-01  5.0827e-01 10.7005
+## Intercept6   1.2851e-01  4.0839e-02  4.8472e-02  2.0856e-01  3.1469
+## Intercept7   2.0521e-01  4.9554e-02  1.0809e-01  3.0233e-01  4.1411
+## Intercept8   2.3988e-01  3.1927e-02  1.7730e-01  3.0246e-01  7.5134
+## Intercept9   1.8907e-01  4.2998e-02  1.0480e-01  2.7335e-01  4.3972
+## Intercept10  4.4403e-01  3.2524e-02  3.8029e-01  5.0778e-01 13.6524
+## Tau2_1_1     3.7222e-02  1.5000e-02  7.8226e-03  6.6621e-02  2.4815
+## Tau2_2_2     2.0313e-02  8.4334e-03  3.7838e-03  3.6842e-02  2.4086
+## Tau2_3_3     4.8285e-02  1.9739e-02  9.5975e-03  8.6973e-02  2.4462
+## Tau2_4_4     2.4630e-02  1.0625e-02  3.8051e-03  4.5454e-02  2.3181
+## Tau2_5_5     1.8744e-02  8.2473e-03  2.5795e-03  3.4908e-02  2.2727
+## Tau2_6_6     1.8317e-02  8.8017e-03  1.0661e-03  3.5568e-02  2.0811
+## Tau2_7_7     2.9412e-02  1.2252e-02  5.3990e-03  5.3425e-02  2.4006
+## Tau2_8_8     9.6824e-03  4.8934e-03  9.1568e-05  1.9273e-02  1.9787
+## Tau2_9_9     2.0951e-02  9.1286e-03  3.0590e-03  3.8842e-02  2.2951
+## Tau2_10_10   1.1156e-02  5.0453e-03  1.2673e-03  2.1044e-02  2.2111
 ##              Pr(&gt;|z|)    
-## Intercept1  3.384e-13 ***
+## Intercept1  3.366e-13 ***
 ## Intercept2  &lt; 2.2e-16 ***
-## Intercept3   0.376823    
-## Intercept4   0.032777 *  
+## Intercept3    0.37722    
+## Intercept4    0.03276 *  
 ## Intercept5  &lt; 2.2e-16 ***
-## Intercept6   0.001641 ** 
-## Intercept7  3.488e-05 ***
-## Intercept8  5.662e-14 ***
-## Intercept9  1.101e-05 ***
+## Intercept6    0.00165 ** 
+## Intercept7  3.456e-05 ***
+## Intercept8  5.751e-14 ***
+## Intercept9  1.097e-05 ***
 ## Intercept10 &lt; 2.2e-16 ***
-## Tau2_1_1     0.013120 *  
-## Tau2_2_2     0.016069 *  
-## Tau2_3_3     0.014492 *  
-## Tau2_4_4     0.020535 *  
-## Tau2_5_5     0.023184 *  
-## Tau2_6_6     0.037786 *  
-## Tau2_7_7     0.016420 *  
-## Tau2_8_8     0.048077 *  
-## Tau2_9_9     0.021829 *  
-## Tau2_10_10   0.027143 *  
+## Tau2_1_1      0.01308 *  
+## Tau2_2_2      0.01601 *  
+## Tau2_3_3      0.01444 *  
+## Tau2_4_4      0.02044 *  
+## Tau2_5_5      0.02304 *  
+## Tau2_6_6      0.03743 *  
+## Tau2_7_7      0.01637 *  
+## Tau2_8_8      0.04785 *  
+## Tau2_9_9      0.02173 *  
+## Tau2_10_10    0.02703 *  
 ## ---
 ## Signif. codes:  0 &#39;***&#39; 0.001 &#39;**&#39; 0.01 &#39;*&#39; 0.05 &#39;.&#39; 0.1 &#39; &#39; 1
 ## 
-## Q statistic on the homogeneity of effect sizes: 2380.997
+## Q statistic on the homogeneity of effect sizes: 2390.071
 ## Degrees of freedom of the Q statistic: 130
 ## P value of the Q statistic: 0
 ## 
 ## Heterogeneity indices (based on the estimated Tau2):
 ##                               Estimate
-## Intercept1: I2 (Q statistic)    0.9487
-## Intercept2: I2 (Q statistic)    0.9082
-## Intercept3: I2 (Q statistic)    0.9414
-## Intercept4: I2 (Q statistic)    0.8894
-## Intercept5: I2 (Q statistic)    0.9005
-## Intercept6: I2 (Q statistic)    0.8537
-## Intercept7: I2 (Q statistic)    0.9093
-## Intercept8: I2 (Q statistic)    0.7714
-## Intercept9: I2 (Q statistic)    0.8746
-## Intercept10: I2 (Q statistic)   0.8431
+## Intercept1: I2 (Q statistic)    0.9489
+## Intercept2: I2 (Q statistic)    0.9085
+## Intercept3: I2 (Q statistic)    0.9417
+## Intercept4: I2 (Q statistic)    0.8898
+## Intercept5: I2 (Q statistic)    0.9009
+## Intercept6: I2 (Q statistic)    0.8545
+## Intercept7: I2 (Q statistic)    0.9096
+## Intercept8: I2 (Q statistic)    0.7726
+## Intercept9: I2 (Q statistic)    0.8751
+## Intercept10: I2 (Q statistic)   0.8437
 ## 
 ## Number of studies (or clusters): 14
 ## Number of observed statistics: 140
 ## Number of estimated parameters: 20
 ## Degrees of freedom: 120
-## -2 log likelihood: -110.8452 
+## -2 log likelihood: -110.8759 
 ## OpenMx status1: 0 (&quot;0&quot; or &quot;1&quot;: The optimization is considered fine.
 ## Other values may indicate problems.)
 </code></pre>
 
+<pre><code class="r">## } 
+</code></pre>
 
-<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.5-2 <a href="00Index.html">Index</a>]</div>
+
+<hr /><div style="text-align: center;">[Package <em>metaSEM</em> version 0.9.8 <a href="00Index.html">Index</a>]</div>
 </body></html>
